Basic global styling and  fixing layout stylings -  moving main into wrapping Outlet in layouts -  adding basic navbar in AppLAyout

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,17 @@ html {
 
 main {
     flex-basis: 100%;
-    max-width: 420px;
+}
+h1,
+h2,
+h3,
+h4 {
+    line-height: 1.2;
+    margin: 0.5em auto;
+}
+p {
+    max-width: 720px;
+    line-height: 1.62;
 }
 
 button,
@@ -29,9 +39,20 @@ option {
     color: inherit;
 }
 
+a {
+    color: inherit;
+    transition: color 125ms ease-in-out;
+    font-style: italic;
+
+    &:hover {
+        color: hsl(0, 79%, 60%);
+    }
+}
+
 form {
     display: grid;
     gap: 1rem;
+    max-width: 420px;
 
     label {
         display: flex;
@@ -49,6 +70,11 @@ form {
             outline: 2px solid lightcoral;
         }
     }
+
+    .form-links {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 input[type="submit"],
@@ -59,5 +85,33 @@ button {
     &:hover {
         box-shadow: 2px 2px 4px 0 #22222260;
         translate: -1px -1px;
+    }
+
+    &:active {
+        box-shadow: 1px 1px 3px 0 #22222260;
+        background-color: #eeeeee;
+    }
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 100%;
+
+    img {
+        margin-bottom: auto;
+    }
+    a {
+        text-decoration: none;
+        font-style: normal;
+
+        &:last-of-type {
+            margin-bottom: auto;
+        }
+
+        &.active {
+            color: hsl(0, 79%, 60%);
+        }
     }
 }
